--- a/docs/docs/classic-ml/evaluation/model-eval/index.mdx
+++ b/docs/docs/classic-ml/evaluation/model-eval/index.mdx
@@ -40,7 +40,7 @@ eval_data["label"] = y_test
 with mlflow.start_run():
     # Log model with signature
     signature = infer_signature(X_test, model.predict(X_test))
-    mlflow.sklearn.log_model(model, "model", signature=signature)
+    mlflow.sklearn.log_model(model, name="model", signature=signature)
     model_uri = mlflow.get_artifact_uri("model")
 
     # Comprehensive evaluation
@@ -49,9 +49,9 @@ with mlflow.start_run():
         eval_data,
         targets="label",
         model_type="classifier",
-        evaluators=["default"]
+        evaluators=["default"],
     )
-    
+
     print(f"Accuracy: {result.metrics['accuracy_score']:.3f}")
     print(f"F1 Score: {result.metrics['f1_score']:.3f}")
     print(f"ROC AUC: {result.metrics['roc_auc']:.3f}")
@@ -72,7 +72,7 @@ MLflow supports different model types, each with specialized metrics and evaluat
 <ul>
   <li><strong><code>classifier</code></strong> - Binary and multiclass classification models</li>
   <li><strong><code>regressor</code></strong> - Regression models for continuous target prediction</li>
-</ul>  
+</ul>
 
 <Tabs>
   <TabItem value="classification" label="Classification" default>
@@ -86,7 +86,7 @@ result = mlflow.evaluate(
     eval_data,
     targets="label",
     model_type="classifier",  # Automatically detects binary vs multiclass
-    evaluators=["default"]
+    evaluators=["default"],
 )
 
 # Access classification-specific metrics
@@ -130,17 +130,17 @@ eval_data["target"] = y_test
 with mlflow.start_run():
     # Log and evaluate regression model
     signature = infer_signature(X_train, reg_model.predict(X_train))
-    mlflow.sklearn.log_model(reg_model, "model", signature=signature)
+    mlflow.sklearn.log_model(reg_model, name="model", signature=signature)
     model_uri = mlflow.get_artifact_uri("model")
-    
+
     result = mlflow.evaluate(
         model_uri,
         eval_data,
         targets="target",
         model_type="regressor",
-        evaluators=["default"]
+        evaluators=["default"],
     )
-    
+
     print(f"MAE: {result.metrics['mean_absolute_error']:.3f}")
     print(f"RMSE: {result.metrics['root_mean_squared_error']:.3f}")
     print(f"R² Score: {result.metrics['r2_score']:.3f}")
@@ -171,7 +171,7 @@ result = mlflow.evaluate(
     eval_data,
     targets="label",
     model_type="classifier",
-    evaluators=["default"]
+    evaluators=["default"],
 )
 
 # Include SHAP explainer for feature importance
@@ -181,7 +181,7 @@ result = mlflow.evaluate(
     targets="label",
     model_type="classifier",
     evaluators=["default"],
-    evaluator_config={"log_explainer": True}
+    evaluator_config={"log_explainer": True},
 )
 ```
 
@@ -218,19 +218,19 @@ import mlflow
 import numpy as np
 from mlflow.models import make_metric
 
+
 def weighted_accuracy(predictions, targets, metrics, sample_weights=None):
     """Custom weighted accuracy metric."""
     if sample_weights is None:
         return (predictions == targets).mean()
     else:
-        correct = (predictions == targets)
+        correct = predictions == targets
         return np.average(correct, weights=sample_weights)
+
 
 # Create custom metric
 custom_accuracy = make_metric(
-    eval_fn=weighted_accuracy,
-    greater_is_better=True,
-    name="weighted_accuracy"
+    eval_fn=weighted_accuracy, greater_is_better=True, name="weighted_accuracy"
 )
 
 # Use in evaluation
@@ -239,7 +239,7 @@ result = mlflow.evaluate(
     eval_data,
     targets="label",
     model_type="classifier",
-    extra_metrics=[custom_accuracy]
+    extra_metrics=[custom_accuracy],
 )
 ```
 
@@ -252,23 +252,25 @@ Create custom visualization and analysis artifacts:
 import matplotlib.pyplot as plt
 import os
 
+
 def create_residual_plot(eval_df, builtin_metrics, artifacts_dir):
     """Create custom residual plot for regression models."""
-    
+
     residuals = eval_df["target"] - eval_df["prediction"]
-    
+
     plt.figure(figsize=(10, 6))
     plt.scatter(eval_df["prediction"], residuals, alpha=0.6)
-    plt.axhline(y=0, color='r', linestyle='--')
-    plt.xlabel('Predicted Values')
-    plt.ylabel('Residuals')
-    plt.title('Residual Plot')
-    
+    plt.axhline(y=0, color="r", linestyle="--")
+    plt.xlabel("Predicted Values")
+    plt.ylabel("Residuals")
+    plt.title("Residual Plot")
+
     plot_path = os.path.join(artifacts_dir, "residual_plot.png")
     plt.savefig(plot_path)
     plt.close()
-    
+
     return {"residual_plot": plot_path}
+
 
 # Use custom artifact
 result = mlflow.evaluate(
@@ -276,7 +278,7 @@ result = mlflow.evaluate(
     eval_data,
     targets="target",
     model_type="regressor",
-    custom_artifacts=[create_residual_plot]
+    custom_artifacts=[create_residual_plot],
 )
 ```
 
@@ -289,12 +291,7 @@ The evaluation result object provides comprehensive access to all generated metr
 
 ```python
 # Run evaluation
-result = mlflow.evaluate(
-    model_uri,
-    eval_data,
-    targets="label",
-    model_type="classifier"
-)
+result = mlflow.evaluate(model_uri, eval_data, targets="label", model_type="classifier")
 
 # Access metrics
 print("All Metrics:")
@@ -328,7 +325,7 @@ from sklearn.svm import SVC
 models = {
     "random_forest": RandomForestClassifier(n_estimators=100, random_state=42),
     "logistic_regression": LogisticRegression(random_state=42),
-    "svm": SVC(probability=True, random_state=42)
+    "svm": SVC(probability=True, random_state=42),
 }
 
 # Evaluate each model
@@ -338,28 +335,27 @@ for model_name, model in models.items():
     with mlflow.start_run(run_name=f"eval_{model_name}"):
         # Train model
         model.fit(X_train, y_train)
-        
+
         # Log model
         signature = infer_signature(X_train, model.predict(X_train))
-        mlflow.sklearn.log_model(model, "model", signature=signature)
+        mlflow.sklearn.log_model(model, name="model", signature=signature)
         model_uri = mlflow.get_artifact_uri("model")
-        
+
         # Evaluate model
         result = mlflow.evaluate(
-            model_uri,
-            eval_data,
-            targets="label",
-            model_type="classifier"
+            model_uri, eval_data, targets="label", model_type="classifier"
         )
-        
+
         results[model_name] = result.metrics
-        
+
         # Log comparison metrics
-        mlflow.log_metrics({
-            "accuracy": result.metrics["accuracy_score"],
-            "f1": result.metrics["f1_score"],
-            "roc_auc": result.metrics["roc_auc"]
-        })
+        mlflow.log_metrics(
+            {
+                "accuracy": result.metrics["accuracy_score"],
+                "f1": result.metrics["f1_score"],
+                "roc_auc": result.metrics["roc_auc"],
+            }
+        )
 
 # Compare results
 comparison_df = pd.DataFrame(results).T
@@ -375,50 +371,52 @@ Combine MLflow evaluation with cross-validation:
 ```python
 from sklearn.model_selection import cross_val_score, StratifiedKFold
 
+
 def evaluate_with_cv(model, X, y, eval_data, cv_folds=5):
     """Evaluate model with cross-validation and final test evaluation."""
-    
+
     with mlflow.start_run():
         # Cross-validation scores
         cv = StratifiedKFold(n_splits=cv_folds, shuffle=True, random_state=42)
-        cv_scores = cross_val_score(model, X, y, cv=cv, scoring='f1_weighted')
-        
+        cv_scores = cross_val_score(model, X, y, cv=cv, scoring="f1_weighted")
+
         # Log CV results
-        mlflow.log_metrics({
-            "cv_mean_f1": cv_scores.mean(),
-            "cv_std_f1": cv_scores.std()
-        })
-        
+        mlflow.log_metrics(
+            {"cv_mean_f1": cv_scores.mean(), "cv_std_f1": cv_scores.std()}
+        )
+
         # Train on full dataset
         model.fit(X, y)
-        
+
         # Final evaluation
         signature = infer_signature(X, model.predict(X))
-        mlflow.sklearn.log_model(model, "model", signature=signature)
+        mlflow.sklearn.log_model(model, name="model", signature=signature)
         model_uri = mlflow.get_artifact_uri("model")
-        
+
         result = mlflow.evaluate(
-            model_uri,
-            eval_data,
-            targets="label",
-            model_type="classifier"
+            model_uri, eval_data, targets="label", model_type="classifier"
         )
-        
+
         # Compare CV and test performance
         test_f1 = result.metrics["f1_score"]
         cv_f1 = cv_scores.mean()
-        
-        mlflow.log_metrics({
-            "cv_vs_test_diff": abs(cv_f1 - test_f1),
-            "potential_overfit": cv_f1 - test_f1 > 0.05
-        })
-        
+
+        mlflow.log_metrics(
+            {
+                "cv_vs_test_diff": abs(cv_f1 - test_f1),
+                "potential_overfit": cv_f1 - test_f1 > 0.05,
+            }
+        )
+
         return result
+
 
 # Usage
 result = evaluate_with_cv(
     RandomForestClassifier(n_estimators=100, random_state=42),
-    X_train, y_train, eval_data
+    X_train,
+    y_train,
+    eval_data,
 )
 ```
 
@@ -428,45 +426,44 @@ result = evaluate_with_cv(
 Automated model selection based on evaluation metrics:
 
 ```python
-def evaluate_and_select_best_model(models, X_train, y_train, eval_data, metric="f1_score"):
+def evaluate_and_select_best_model(
+    models, X_train, y_train, eval_data, metric="f1_score"
+):
     """Evaluate multiple models and select the best performer."""
-    
+
     results = {}
     best_score = -1
     best_model_name = None
-    
+
     for model_name, model in models.items():
         with mlflow.start_run(run_name=f"candidate_{model_name}"):
             # Train and evaluate
             model.fit(X_train, y_train)
-            
+
             signature = infer_signature(X_train, model.predict(X_train))
-            mlflow.sklearn.log_model(model, "model", signature=signature)
+            mlflow.sklearn.log_model(model, name="model", signature=signature)
             model_uri = mlflow.get_artifact_uri("model")
-            
+
             result = mlflow.evaluate(
-                model_uri,
-                eval_data,
-                targets="label",
-                model_type="classifier"
+                model_uri, eval_data, targets="label", model_type="classifier"
             )
-            
+
             score = result.metrics[metric]
             results[model_name] = score
-            
+
             # Track best model
             if score > best_score:
                 best_score = score
                 best_model_name = model_name
-            
+
             # Log selection metrics
-            mlflow.log_metrics({
-                "selection_score": score,
-                "is_best": score == best_score
-            })
-    
+            mlflow.log_metrics(
+                {"selection_score": score, "is_best": score == best_score}
+            )
+
     print(f"Best model: {best_model_name} (Score: {best_score:.3f})")
     return best_model_name, results
+
 
 # Use automated selection
 best_model, all_scores = evaluate_and_select_best_model(
@@ -492,35 +489,27 @@ to assess the quality of your model against a baseline.
 from mlflow.models import MetricThreshold
 
 # Evaluate your model first
-result = mlflow.evaluate(
-    model_uri,
-    eval_data,
-    targets="label",
-    model_type="classifier"
-)
+result = mlflow.evaluate(model_uri, eval_data, targets="label", model_type="classifier")
 
 # Define static performance thresholds
 static_thresholds = {
     "accuracy_score": MetricThreshold(
-        threshold=0.85,                   # Must achieve 85% accuracy
-        greater_is_better=True
+        threshold=0.85, greater_is_better=True  # Must achieve 85% accuracy
     ),
     "precision_score": MetricThreshold(
-        threshold=0.80,                   # Must achieve 80% precision
-        greater_is_better=True
+        threshold=0.80, greater_is_better=True  # Must achieve 80% precision
     ),
     "recall_score": MetricThreshold(
-        threshold=0.75,                   # Must achieve 75% recall
-        greater_is_better=True
-    )
+        threshold=0.75, greater_is_better=True  # Must achieve 75% recall
+    ),
 }
 
 # Validate against static thresholds
 try:
     mlflow.validate_evaluation_results(
         candidate_result=result,
-        baseline_result=None,             # No baseline comparison
-        validation_thresholds=static_thresholds
+        baseline_result=None,  # No baseline comparison
+        validation_thresholds=static_thresholds,
     )
     print("✅ Model meets all static performance thresholds.")
 except mlflow.exceptions.ModelValidationFailedException as e:
@@ -539,29 +528,30 @@ Analyze model errors in detail:
 ```python
 def analyze_model_errors(result, eval_data, targets, top_n=20):
     """Analyze model errors in detail."""
-    
+
     # Load evaluation results
     eval_table = result.tables["eval_results_table"]
-    
+
     # Identify errors
     errors = eval_table[eval_table["prediction"] != eval_table[targets]]
-    
+
     if len(errors) > 0:
         print(f"Total errors: {len(errors)} out of {len(eval_table)} predictions")
         print(f"Error rate: {len(errors) / len(eval_table) * 100:.2f}%")
-        
+
         # Most confident wrong predictions
         if "prediction_score" in errors.columns:
             confident_errors = errors.nlargest(top_n, "prediction_score")
             print(f"\nTop {top_n} most confident errors:")
             print(confident_errors[["prediction", targets, "prediction_score"]].head())
-        
+
         # Error patterns by true class
         error_by_class = errors.groupby(targets).size()
         print(f"\nErrors by true class:")
         print(error_by_class)
-    
+
     return errors
+
 
 # Usage
 errors = analyze_model_errors(result, eval_data, "label")
@@ -575,47 +565,55 @@ Analyze how model errors relate to input features:
 ```python
 def analyze_errors_by_features(model_uri, eval_data, targets, feature_columns):
     """Analyze how model errors relate to input features."""
-    
+
     # Get model predictions
     model = mlflow.pyfunc.load_model(model_uri)
     predictions = model.predict(eval_data[feature_columns])
-    
+
     # Create analysis dataframe
     analysis_df = eval_data.copy()
     analysis_df["prediction"] = predictions
     analysis_df["is_error"] = analysis_df["prediction"] != analysis_df[targets]
-    
+
     # Feature statistics for errors vs correct predictions
     feature_stats = {}
-    
+
     for feature in feature_columns:
-        if analysis_df[feature].dtype in ['int64', 'float64']:
+        if analysis_df[feature].dtype in ["int64", "float64"]:
             # Numerical features
             correct_mean = analysis_df[~analysis_df["is_error"]][feature].mean()
             error_mean = analysis_df[analysis_df["is_error"]][feature].mean()
-            
+
             feature_stats[feature] = {
                 "correct_mean": correct_mean,
                 "error_mean": error_mean,
                 "difference": abs(error_mean - correct_mean),
-                "relative_difference": abs(error_mean - correct_mean) / correct_mean if correct_mean != 0 else 0
+                "relative_difference": abs(error_mean - correct_mean) / correct_mean
+                if correct_mean != 0
+                else 0,
             }
-    
+
     # Sort features by impact on errors
-    numerical_features = [(k, v["relative_difference"]) for k, v in feature_stats.items() 
-                        if "relative_difference" in v]
+    numerical_features = [
+        (k, v["relative_difference"])
+        for k, v in feature_stats.items()
+        if "relative_difference" in v
+    ]
     numerical_features.sort(key=lambda x: x[1], reverse=True)
-    
+
     print("Features most associated with errors:")
     for feature, diff in numerical_features[:5]:
         print(f"  {feature}: {diff:.3f}")
-    
+
     return feature_stats, analysis_df
+
 
 # Usage
 feature_stats, analysis = analyze_errors_by_features(
-    model_uri, eval_data, "label", 
-    feature_columns=eval_data.drop(columns=["label"]).columns.tolist()
+    model_uri,
+    eval_data,
+    "label",
+    feature_columns=eval_data.drop(columns=["label"]).columns.tolist(),
 )
 ```
 
@@ -630,24 +628,25 @@ feature_stats, analysis = analyze_errors_by_features(
 Complete evaluation workflow with best practices:
 
 ```python
-def comprehensive_model_evaluation(model, X_train, y_train, eval_data, targets, model_type):
+def comprehensive_model_evaluation(
+    model, X_train, y_train, eval_data, targets, model_type
+):
     """Complete evaluation workflow with best practices."""
-    
+
     with mlflow.start_run():
         # Train model
         model.fit(X_train, y_train)
-        
+
         # Log training info
-        mlflow.log_params({
-            "model_class": model.__class__.__name__,
-            "training_samples": len(X_train)
-        })
-        
+        mlflow.log_params(
+            {"model_class": model.__class__.__name__, "training_samples": len(X_train)}
+        )
+
         # Log model with signature
         signature = infer_signature(X_train, model.predict(X_train))
-        mlflow.sklearn.log_model(model, "model", signature=signature)
+        mlflow.sklearn.log_model(model, name="model", signature=signature)
         model_uri = mlflow.get_artifact_uri("model")
-        
+
         # Comprehensive evaluation
         result = mlflow.evaluate(
             model_uri,
@@ -658,10 +657,10 @@ def comprehensive_model_evaluation(model, X_train, y_train, eval_data, targets, 
             evaluator_config={
                 "log_explainer": True,
                 "explainer_type": "exact",
-                "log_model_explanations": True
-            }
+                "log_model_explanations": True,
+            },
         )
-        
+
         return result
 ```
 
@@ -680,41 +679,41 @@ result = mlflow.evaluate(
     evaluators=["default"],
     evaluator_config={
         "log_explainer": False,  # Skip SHAP for speed
-        "max_error_examples": 50  # Reduce error analysis
-    }
+        "max_error_examples": 50,  # Reduce error analysis
+    },
 )
+
 
 # For very large datasets - evaluate in batches
 def evaluate_in_batches(model_uri, large_eval_data, targets, batch_size=1000):
     """Evaluate large datasets in batches to manage memory."""
-    
+
     all_predictions = []
     all_targets = []
-    
+
     for i in range(0, len(large_eval_data), batch_size):
-        batch = large_eval_data.iloc[i:i+batch_size]
-        
+        batch = large_eval_data.iloc[i : i + batch_size]
+
         # Get predictions for batch
         model = mlflow.pyfunc.load_model(model_uri)
         batch_predictions = model.predict(batch.drop(columns=[targets]))
-        
+
         all_predictions.extend(batch_predictions)
         all_targets.extend(batch[targets].values)
-    
+
     # Create final evaluation dataset
-    final_eval_data = pd.DataFrame({
-        'prediction': all_predictions,
-        'target': all_targets
-    })
-    
+    final_eval_data = pd.DataFrame(
+        {"prediction": all_predictions, "target": all_targets}
+    )
+
     # Evaluate using static dataset approach
     result = mlflow.evaluate(
         data=final_eval_data,
         predictions="prediction",
         targets="target",
-        model_type="classifier"
+        model_type="classifier",
     )
-    
+
     return result
 ```
 
@@ -726,30 +725,34 @@ Ensure consistent evaluation results:
 ```python
 def reproducible_evaluation(model, eval_data, targets, random_seed=42):
     """Ensure reproducible evaluation results."""
-    
+
     # Set random seeds
     np.random.seed(random_seed)
-    
+
     with mlflow.start_run():
         # Log evaluation configuration
-        mlflow.log_params({
-            "eval_random_seed": random_seed,
-            "eval_data_size": len(eval_data),
-            "eval_timestamp": pd.Timestamp.now().isoformat()
-        })
-        
+        mlflow.log_params(
+            {
+                "eval_random_seed": random_seed,
+                "eval_data_size": len(eval_data),
+                "eval_timestamp": pd.Timestamp.now().isoformat(),
+            }
+        )
+
         # Consistent data ordering
-        eval_data_sorted = eval_data.sort_values(by=eval_data.columns.tolist()).reset_index(drop=True)
-        
+        eval_data_sorted = eval_data.sort_values(
+            by=eval_data.columns.tolist()
+        ).reset_index(drop=True)
+
         # Run evaluation
         result = mlflow.evaluate(
             model,
             eval_data_sorted,
             targets=targets,
             model_type="classifier",
-            evaluator_config={"random_seed": random_seed}
+            evaluator_config={"random_seed": random_seed},
         )
-        
+
         return result
 ```
 
