--- a/docs/docs/classic-ml/tracking/quickstart/index.mdx
+++ b/docs/docs/classic-ml/tracking/quickstart/index.mdx
@@ -3,6 +3,8 @@ sidebar_position: 2
 ---
 
 import { CardGroup, PageCard } from "@site/src/components/Card";
+import Link from "@docusaurus/Link";
+import { NotebookDownloadButton } from "@site/src/components/NotebookDownloadButton";
 
 # MLflow Tracking Quickstart
 
@@ -26,6 +28,14 @@ In just a few minutes of following along with this quickstart, you will learn:
 - How to **register** a model during logging
 - How to navigate to a model in the **MLflow UI**
 - How to **load** a logged model for inference
+
+:::note
+If you would prefer to view a Jupyter Notebook version of this tutorial, click the following link:
+
+<Link className="button button--primary" to="notebooks/tracking_quickstart" target="_blank">
+  <span>View the Notebook</span>
+</Link>
+:::
 
 ## Step 1 - Get MLflow
 
