--- a/docs/docs/classic-ml/traditional-ml/tutorials/creating-custom-pyfunc/index.mdx
+++ b/docs/docs/classic-ml/traditional-ml/tutorials/creating-custom-pyfunc/index.mdx
@@ -10,7 +10,7 @@ beyond these and craft something tailored to your needs. That's where custom PyF
 :::tip
 MLflow 2.12.2 introduced the feature "models from code", which greatly simplifies the process of serializing and deploying custom models through the use
 of script serialization. While the tutorial here is valuable as a point of reference, we strongly recommend migrating custom model implementations to this
-new paradigm. You can learn more about models from code within the [Models From Code Guide](/model/models-from-code).
+new paradigm. You can learn more about models from code within the [Models From Code Guide](/ml/model/models-from-code).
 :::
 
 What's in this tutorial?
@@ -36,6 +36,6 @@ This guide aims to walk you through the intricacies of PyFuncs, explaining the w
 By the end of this tutorial, you'll have a clear understanding of how to leverage custom PyFuncs in MLflow to cater to specialized needs,
 ensuring flexibility without compromising on the ease of use.
 
-- [Models, Flavors, and PyFuncs in MLflow](/traditional-ml/creating-custom-pyfunc/part1-named-flavors)
-- [Understanding Pyfunc Components](/traditional-ml/creating-custom-pyfunc/part2-pyfunc-components)
-- [Full Notebooks](/traditional-ml/creating-custom-pyfunc/notebooks)
+- [Models, Flavors, and PyFuncs in MLflow](/ml/traditional-ml/tutorials/creating-custom-pyfunc/part1-named-flavors)
+- [Understanding Pyfunc Components](/ml/traditional-ml/tutorials/creating-custom-pyfunc/part2-pyfunc-components)
+- [Full Notebooks](/ml/traditional-ml/tutorials/creating-custom-pyfunc/notebooks)
