--- a/docs/docs/classic-ml/traditional-ml/tutorials/creating-custom-pyfunc/notebooks/index.mdx
+++ b/docs/docs/classic-ml/traditional-ml/tutorials/creating-custom-pyfunc/notebooks/index.mdx
@@ -137,20 +137,7 @@ grow in complexity, such customization becomes invaluable, ensuring our deployme
   <span>View the Notebook</span>
 </Link>
 
-## Run the Notebooks in your Environment
-
-Additionally, if you would like to download a copy locally to run in your own environment, you can download by
-clicking the respective links to each notebook in this guide:
-
-<NotebookDownloadButton href="https://raw.githubusercontent.com/mlflow/mlflow/master/docs/source/traditional-ml/creating-custom-pyfunc/notebooks/introduction.ipynb">Download the Introduction notebook</NotebookDownloadButton>
-<br />
-<br />
-<NotebookDownloadButton href="https://raw.githubusercontent.com/mlflow/mlflow/master/docs/source/traditional-ml/creating-custom-pyfunc/notebooks/basic-pyfunc.ipynb">Download the Basic Pyfunc notebook</NotebookDownloadButton>
-<br />
-<br />
-<NotebookDownloadButton href="https://raw.githubusercontent.com/mlflow/mlflow/master/docs/source/traditional-ml/creating-custom-pyfunc/notebooks/override-predict.ipynb">Download the Predict Override notebook</NotebookDownloadButton>
-<br />
-<br />
+If you would like to run the notebooks in this tutorial series, each notebook page has a link to download the notebooks locally to your computer.
 
 :::note
 In order to run the notebooks, please ensure that you either have a local MLflow Tracking Server started or modify the
