--- a/docs/docs/classic-ml/traditional-ml/tutorials/serving-multiple-models-with-pyfunc/index.mdx
+++ b/docs/docs/classic-ml/traditional-ml/tutorials/serving-multiple-models-with-pyfunc/index.mdx
@@ -15,7 +15,7 @@ functionality using any MLflow-compatible service combined with a custom PyFunc 
 :::tip
 MLflow 2.12.2 introduced the feature "models from code", which greatly simplifies the process of serializing and deploying custom models through the use
 of script serialization. While the tutorial here is valuable as a point of reference, we strongly recommend migrating custom model implementations to this
-new paradigm. You can learn more about models from code within the [Models From Code Guide](/model/models-from-code).
+new paradigm. You can learn more about models from code within the [Models From Code Guide](/ml/model/models-from-code).
 :::
 
 Here are some reasons to consider this design:
@@ -40,7 +40,7 @@ single endpoint.
 
 Custom PyFunc models are a powerful MLflow feature that lets users customize model functionality
 where named flavors may be lacking. Going forward we assume basic working knowledge of PyFunc, so if
-you're unfamiliar, check out the [Creating Custom PyFunc](/traditional-ml/creating-custom-pyfunc)
+you're unfamiliar, check out the [Creating Custom PyFunc](/ml/traditional-ml/tutorials/creating-custom-pyfunc)
 tutorial.
 
 ## What do I need to do?
