--- a/docs/docs/classic-ml/evaluation/dataset-eval/index.mdx
+++ b/docs/docs/classic-ml/evaluation/dataset-eval/index.mdx
@@ -25,7 +25,9 @@ from sklearn.model_selection import train_test_split
 
 # Generate sample data and train a model
 X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)
-X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)
+X_train, X_test, y_train, y_test = train_test_split(
+    X, y, test_size=0.3, random_state=42
+)
 
 model = RandomForestClassifier(n_estimators=100, random_state=42)
 model.fit(X_train, y_train)
@@ -35,14 +37,16 @@ predictions = model.predict(X_test)
 prediction_probabilities = model.predict_proba(X_test)[:, 1]
 
 # Create evaluation dataset with predictions already computed
-eval_dataset = pd.DataFrame({
-    'prediction': predictions,
-    'prediction_proba': prediction_probabilities,
-    'target': y_test
-})
+eval_dataset = pd.DataFrame(
+    {
+        "prediction": predictions,
+        "prediction_proba": prediction_probabilities,
+        "target": y_test,
+    }
+)
 
 # Add original features for analysis (optional)
-feature_names = [f'feature_{i}' for i in range(X_test.shape[1])]
+feature_names = [f"feature_{i}" for i in range(X_test.shape[1])]
 for i, feature_name in enumerate(feature_names):
     eval_dataset[feature_name] = X_test[:, i]
 
@@ -51,10 +55,10 @@ with mlflow.start_run():
     result = mlflow.evaluate(
         data=eval_dataset,
         predictions="prediction",  # Column containing predictions
-        targets="target",         # Column containing true labels
-        model_type="classifier"
+        targets="target",  # Column containing true labels
+        model_type="classifier",
     )
-    
+
     print(f"Accuracy: {result.metrics['accuracy_score']:.3f}")
     print(f"F1 Score: {result.metrics['f1_score']:.3f}")
     print(f"ROC AUC: {result.metrics['roc_auc']:.3f}")
@@ -80,23 +84,23 @@ import mlflow.data
 
 # Create MLflow dataset with prediction column specified
 dataset = mlflow.data.from_pandas(
-    eval_dataset, 
+    eval_dataset,
     predictions="prediction",  # Specify prediction column
-    targets="target"          # Specify target column
+    targets="target",  # Specify target column
 )
 
 with mlflow.start_run():
     # Log the dataset
     mlflow.log_input(dataset, context="evaluation")
-    
+
     # Evaluate using the dataset (predictions=None since specified in dataset)
     result = mlflow.evaluate(
         data=dataset,
         predictions=None,  # Already specified in dataset creation
         targets="target",
-        model_type="classifier"
+        model_type="classifier",
     )
-    
+
     print("Evaluation completed using MLflow PandasDataset")
 ```
 
@@ -107,12 +111,16 @@ When your model produces multiple outputs, you can evaluate different output col
 
 ```python
 # Simulate multi-output model results
-multi_output_data = pd.DataFrame({
-    'primary_prediction': predictions,
-    'confidence_score': prediction_probabilities,
-    'auxiliary_output': np.random.random(len(predictions)),  # Additional model output
-    'target': y_test
-})
+multi_output_data = pd.DataFrame(
+    {
+        "primary_prediction": predictions,
+        "confidence_score": prediction_probabilities,
+        "auxiliary_output": np.random.random(
+            len(predictions)
+        ),  # Additional model output
+        "target": y_test,
+    }
+)
 
 with mlflow.start_run():
     # Evaluate primary prediction
@@ -120,19 +128,21 @@ with mlflow.start_run():
         data=multi_output_data,
         predictions="primary_prediction",
         targets="target",
-        model_type="classifier"
+        model_type="classifier",
     )
-    
+
     # Access other outputs for custom analysis
-    confidence_scores = multi_output_data['confidence_score']
-    auxiliary_outputs = multi_output_data['auxiliary_output']
-    
+    confidence_scores = multi_output_data["confidence_score"]
+    auxiliary_outputs = multi_output_data["auxiliary_output"]
+
     # Log additional analysis
-    mlflow.log_metrics({
-        "avg_confidence": confidence_scores.mean(),
-        "confidence_std": confidence_scores.std(),
-        "avg_auxiliary": auxiliary_outputs.mean()
-    })
+    mlflow.log_metrics(
+        {
+            "avg_confidence": confidence_scores.mean(),
+            "confidence_std": confidence_scores.std(),
+            "avg_auxiliary": auxiliary_outputs.mean(),
+        }
+    )
 ```
 
   </TabItem>
@@ -148,41 +158,46 @@ For production batch inference results:
 ```python
 def evaluate_batch_predictions(batch_results_path, batch_size=10000):
     """Evaluate large batch prediction results efficiently."""
-    
+
     # Read batch results (could be from S3, database, etc.)
     batch_df = pd.read_parquet(batch_results_path)
-    
+
     print(f"Evaluating {len(batch_df)} batch predictions")
-    
+
     with mlflow.start_run(run_name="Batch_Evaluation"):
         # Log batch metadata
-        mlflow.log_params({
-            "batch_size": len(batch_df),
-            "batch_date": batch_df.get('prediction_date', 'unknown').iloc[0] if len(batch_df) > 0 else 'unknown',
-            "data_source": batch_results_path
-        })
-        
+        mlflow.log_params(
+            {
+                "batch_size": len(batch_df),
+                "batch_date": batch_df.get("prediction_date", "unknown").iloc[0]
+                if len(batch_df) > 0
+                else "unknown",
+                "data_source": batch_results_path,
+            }
+        )
+
         # Evaluate full batch
         result = mlflow.evaluate(
             data=batch_df,
             predictions="model_prediction",
             targets="true_label",
-            model_type="classifier"
+            model_type="classifier",
         )
-        
+
         # Additional batch-specific analysis
-        if 'prediction_timestamp' in batch_df.columns:
+        if "prediction_timestamp" in batch_df.columns:
             # Analyze performance over time
-            batch_df['hour'] = pd.to_datetime(batch_df['prediction_timestamp']).dt.hour
-            hourly_accuracy = batch_df.groupby('hour').apply(
-                lambda x: (x['model_prediction'] == x['true_label']).mean()
+            batch_df["hour"] = pd.to_datetime(batch_df["prediction_timestamp"]).dt.hour
+            hourly_accuracy = batch_df.groupby("hour").apply(
+                lambda x: (x["model_prediction"] == x["true_label"]).mean()
             )
-            
+
             # Log time-based metrics
             for hour, accuracy in hourly_accuracy.items():
                 mlflow.log_metric(f"accuracy_hour_{hour}", accuracy)
-        
+
         return result
+
 
 # Usage
 # result = evaluate_batch_predictions("s3://my-bucket/batch-predictions/2024-01-15.parquet")
@@ -194,63 +209,68 @@ def evaluate_batch_predictions(batch_results_path, batch_size=10000):
 Analyze model performance trends over time:
 
 ```python
-def analyze_historical_performance(historical_data, time_column='prediction_date'):
+def analyze_historical_performance(historical_data, time_column="prediction_date"):
     """Analyze model performance trends over time."""
-    
+
     historical_data[time_column] = pd.to_datetime(historical_data[time_column])
-    
+
     with mlflow.start_run(run_name="Historical_Performance_Analysis"):
         # Overall historical evaluation
         overall_result = mlflow.evaluate(
             data=historical_data,
             predictions="prediction",
             targets="actual",
-            model_type="classifier"
+            model_type="classifier",
         )
-        
+
         # Time-based analysis
-        historical_data['month'] = historical_data[time_column].dt.to_period('M')
+        historical_data["month"] = historical_data[time_column].dt.to_period("M")
         monthly_performance = []
-        
-        for month in historical_data['month'].unique():
-            month_data = historical_data[historical_data['month'] == month]
-            
+
+        for month in historical_data["month"].unique():
+            month_data = historical_data[historical_data["month"] == month]
+
             if len(month_data) > 50:  # Minimum samples for reliable metrics
                 with mlflow.start_run(run_name=f"Month_{month}", nested=True):
                     month_result = mlflow.evaluate(
                         data=month_data,
                         predictions="prediction",
                         targets="actual",
-                        model_type="classifier"
+                        model_type="classifier",
                     )
-                    
-                    monthly_performance.append({
-                        'month': str(month),
-                        'accuracy': month_result.metrics['accuracy_score'],
-                        'f1': month_result.metrics['f1_score'],
-                        'sample_count': len(month_data)
-                    })
-        
+
+                    monthly_performance.append(
+                        {
+                            "month": str(month),
+                            "accuracy": month_result.metrics["accuracy_score"],
+                            "f1": month_result.metrics["f1_score"],
+                            "sample_count": len(month_data),
+                        }
+                    )
+
         # Log trend analysis
         if monthly_performance:
             perf_df = pd.DataFrame(monthly_performance)
-            
+
             # Calculate trends
-            accuracy_trend = np.polyfit(range(len(perf_df)), perf_df['accuracy'], 1)[0]
-            f1_trend = np.polyfit(range(len(perf_df)), perf_df['f1'], 1)[0]
-            
-            mlflow.log_metrics({
-                "accuracy_trend_slope": accuracy_trend,
-                "f1_trend_slope": f1_trend,
-                "performance_variance": perf_df['accuracy'].var(),
-                "months_analyzed": len(monthly_performance)
-            })
-            
+            accuracy_trend = np.polyfit(range(len(perf_df)), perf_df["accuracy"], 1)[0]
+            f1_trend = np.polyfit(range(len(perf_df)), perf_df["f1"], 1)[0]
+
+            mlflow.log_metrics(
+                {
+                    "accuracy_trend_slope": accuracy_trend,
+                    "f1_trend_slope": f1_trend,
+                    "performance_variance": perf_df["accuracy"].var(),
+                    "months_analyzed": len(monthly_performance),
+                }
+            )
+
             # Save trend data
             perf_df.to_csv("monthly_performance.csv", index=False)
             mlflow.log_artifact("monthly_performance.csv")
-        
+
         return overall_result, monthly_performance
+
 
 # Usage example
 # historical_result, trends = analyze_historical_performance(historical_predictions_df)
@@ -264,9 +284,9 @@ Compare model performance across different datasets or data slices:
 ```python
 def compare_datasets(datasets_dict, model_type="classifier"):
     """Compare model performance across multiple datasets."""
-    
+
     comparison_results = {}
-    
+
     with mlflow.start_run(run_name="Dataset_Comparison"):
         for dataset_name, dataset in datasets_dict.items():
             with mlflow.start_run(run_name=f"Dataset_{dataset_name}", nested=True):
@@ -274,35 +294,44 @@ def compare_datasets(datasets_dict, model_type="classifier"):
                     data=dataset,
                     predictions="prediction",
                     targets="target",
-                    model_type=model_type
+                    model_type=model_type,
                 )
-                
+
                 comparison_results[dataset_name] = result.metrics
-                
+
                 # Log dataset characteristics
-                mlflow.log_params({
-                    "dataset_name": dataset_name,
-                    "dataset_size": len(dataset),
-                    "positive_rate": dataset['target'].mean() if model_type == "classifier" else None
-                })
-        
+                mlflow.log_params(
+                    {
+                        "dataset_name": dataset_name,
+                        "dataset_size": len(dataset),
+                        "positive_rate": dataset["target"].mean()
+                        if model_type == "classifier"
+                        else None,
+                    }
+                )
+
         # Log comparison metrics
         if comparison_results:
-            accuracy_values = [r.get('accuracy_score', 0) for r in comparison_results.values()]
-            mlflow.log_metrics({
-                "max_accuracy": max(accuracy_values),
-                "min_accuracy": min(accuracy_values),
-                "accuracy_range": max(accuracy_values) - min(accuracy_values),
-                "datasets_compared": len(comparison_results)
-            })
-    
+            accuracy_values = [
+                r.get("accuracy_score", 0) for r in comparison_results.values()
+            ]
+            mlflow.log_metrics(
+                {
+                    "max_accuracy": max(accuracy_values),
+                    "min_accuracy": min(accuracy_values),
+                    "accuracy_range": max(accuracy_values) - min(accuracy_values),
+                    "datasets_compared": len(comparison_results),
+                }
+            )
+
     return comparison_results
+
 
 # Usage
 datasets = {
     "validation_set": validation_predictions_df,
     "test_set": test_predictions_df,
-    "holdout_set": holdout_predictions_df
+    "holdout_set": holdout_predictions_df,
 }
 
 comparison = compare_datasets(datasets)
@@ -321,63 +350,70 @@ For datasets too large to fit in memory:
 ```python
 def evaluate_large_dataset_in_chunks(data_path, chunk_size=50000):
     """Evaluate very large datasets by processing in chunks."""
-    
+
     # Read data in chunks
     chunk_results = []
     total_samples = 0
-    
+
     with mlflow.start_run(run_name="Large_Dataset_Evaluation"):
-        for chunk_idx, chunk in enumerate(pd.read_parquet(data_path, chunksize=chunk_size)):
+        for chunk_idx, chunk in enumerate(
+            pd.read_parquet(data_path, chunksize=chunk_size)
+        ):
             chunk_size_actual = len(chunk)
             total_samples += chunk_size_actual
-            
+
             # Evaluate chunk
             with mlflow.start_run(run_name=f"Chunk_{chunk_idx}", nested=True):
                 chunk_result = mlflow.evaluate(
                     data=chunk,
                     predictions="prediction",
                     targets="target",
-                    model_type="classifier"
+                    model_type="classifier",
                 )
-                
+
                 # Weight metrics by chunk size for aggregation
                 weighted_metrics = {
-                    f"{k}_weighted": v * chunk_size_actual 
+                    f"{k}_weighted": v * chunk_size_actual
                     for k, v in chunk_result.metrics.items()
                     if isinstance(v, (int, float))
                 }
-                
-                chunk_results.append({
-                    'chunk_idx': chunk_idx,
-                    'chunk_size': chunk_size_actual,
-                    'metrics': chunk_result.metrics,
-                    'weighted_metrics': weighted_metrics
-                })
-                
+
+                chunk_results.append(
+                    {
+                        "chunk_idx": chunk_idx,
+                        "chunk_size": chunk_size_actual,
+                        "metrics": chunk_result.metrics,
+                        "weighted_metrics": weighted_metrics,
+                    }
+                )
+
                 mlflow.log_param("chunk_size", chunk_size_actual)
-        
+
         # Aggregate results across chunks
         if chunk_results:
             # Calculate weighted averages
             total_weighted = {}
             for chunk in chunk_results:
-                for metric, value in chunk['weighted_metrics'].items():
+                for metric, value in chunk["weighted_metrics"].items():
                     total_weighted[metric] = total_weighted.get(metric, 0) + value
-            
+
             # Log aggregated metrics
             aggregated_metrics = {
-                k.replace('_weighted', '_aggregate'): v / total_samples 
+                k.replace("_weighted", "_aggregate"): v / total_samples
                 for k, v in total_weighted.items()
             }
-            
+
             mlflow.log_metrics(aggregated_metrics)
-            mlflow.log_params({
-                "total_samples": total_samples,
-                "chunks_processed": len(chunk_results),
-                "avg_chunk_size": total_samples / len(chunk_results)
-            })
-    
+            mlflow.log_params(
+                {
+                    "total_samples": total_samples,
+                    "chunks_processed": len(chunk_results),
+                    "avg_chunk_size": total_samples / len(chunk_results),
+                }
+            )
+
     return chunk_results
+
 
 # Usage
 # results = evaluate_large_dataset_in_chunks("large_predictions.parquet")
@@ -391,60 +427,69 @@ For extremely large datasets, use statistical sampling:
 ```python
 def evaluate_with_sampling(large_dataset, sample_size=10000, n_samples=5):
     """Evaluate large dataset using multiple random samples."""
-    
+
     sample_results = []
-    
+
     with mlflow.start_run(run_name="Sampling_Based_Evaluation"):
         for sample_idx in range(n_samples):
             # Create random sample
             if len(large_dataset) > sample_size:
-                sample_data = large_dataset.sample(n=sample_size, random_state=sample_idx)
+                sample_data = large_dataset.sample(
+                    n=sample_size, random_state=sample_idx
+                )
             else:
                 sample_data = large_dataset.copy()
-            
+
             with mlflow.start_run(run_name=f"Sample_{sample_idx}", nested=True):
                 sample_result = mlflow.evaluate(
                     data=sample_data,
                     predictions="prediction",
                     targets="target",
-                    model_type="classifier"
+                    model_type="classifier",
                 )
-                
+
                 sample_results.append(sample_result.metrics)
-                
-                mlflow.log_params({
-                    "sample_idx": sample_idx,
-                    "sample_size": len(sample_data),
-                    "random_seed": sample_idx
-                })
-        
+
+                mlflow.log_params(
+                    {
+                        "sample_idx": sample_idx,
+                        "sample_size": len(sample_data),
+                        "random_seed": sample_idx,
+                    }
+                )
+
         # Aggregate sample results
         if sample_results:
             # Calculate statistics across samples
             metrics_df = pd.DataFrame(sample_results)
-            
+
             aggregated_stats = {}
             for metric in metrics_df.columns:
-                if metrics_df[metric].dtype in ['float64', 'int64']:
-                    aggregated_stats.update({
-                        f"{metric}_mean": metrics_df[metric].mean(),
-                        f"{metric}_std": metrics_df[metric].std(),
-                        f"{metric}_min": metrics_df[metric].min(),
-                        f"{metric}_max": metrics_df[metric].max()
-                    })
-            
+                if metrics_df[metric].dtype in ["float64", "int64"]:
+                    aggregated_stats.update(
+                        {
+                            f"{metric}_mean": metrics_df[metric].mean(),
+                            f"{metric}_std": metrics_df[metric].std(),
+                            f"{metric}_min": metrics_df[metric].min(),
+                            f"{metric}_max": metrics_df[metric].max(),
+                        }
+                    )
+
             mlflow.log_metrics(aggregated_stats)
-            mlflow.log_params({
-                "sampling_strategy": "random",
-                "samples_taken": n_samples,
-                "target_sample_size": sample_size
-            })
-            
+            mlflow.log_params(
+                {
+                    "sampling_strategy": "random",
+                    "samples_taken": n_samples,
+                    "target_sample_size": sample_size,
+                }
+            )
+
             # Save detailed results
             metrics_df.to_csv("sample_results.csv", index=False)
             mlflow.log_artifact("sample_results.csv")
-    
+
     return sample_results, aggregated_stats
+
 
 # Usage
 # samples, stats = evaluate_with_sampling(very_large_dataset, sample_size=5000, n_samples=10)
@@ -458,9 +503,9 @@ Best practices for memory-efficient evaluation:
 ```python
 def memory_efficient_evaluation(large_dataset_path, chunk_size=10000):
     """Memory-efficient evaluation of large datasets."""
-    
+
     chunk_metrics = []
-    
+
     with mlflow.start_run(run_name="Memory_Efficient_Evaluation"):
         for chunk in pd.read_parquet(large_dataset_path, chunksize=chunk_size):
             # Process chunk
@@ -468,34 +513,43 @@ def memory_efficient_evaluation(large_dataset_path, chunk_size=10000):
                 data=chunk,
                 predictions="prediction",
                 targets="target",
-                model_type="classifier"
+                model_type="classifier",
             )
-            
+
             # Store only essential metrics
-            chunk_metrics.append({
-                'size': len(chunk),
-                'accuracy': chunk_result.metrics['accuracy_score'],
-                'f1_score': chunk_result.metrics['f1_score']
-            })
-            
+            chunk_metrics.append(
+                {
+                    "size": len(chunk),
+                    "accuracy": chunk_result.metrics["accuracy_score"],
+                    "f1_score": chunk_result.metrics["f1_score"],
+                }
+            )
+
             # Clear chunk from memory
             del chunk
             del chunk_result
-        
+
         # Compute weighted averages
-        total_samples = sum(cm['size'] for cm in chunk_metrics)
-        weighted_accuracy = sum(cm['accuracy'] * cm['size'] for cm in chunk_metrics) / total_samples
-        weighted_f1 = sum(cm['f1_score'] * cm['size'] for cm in chunk_metrics) / total_samples
-        
+        total_samples = sum(cm["size"] for cm in chunk_metrics)
+        weighted_accuracy = (
+            sum(cm["accuracy"] * cm["size"] for cm in chunk_metrics) / total_samples
+        )
+        weighted_f1 = (
+            sum(cm["f1_score"] * cm["size"] for cm in chunk_metrics) / total_samples
+        )
+
         # Log final metrics
-        mlflow.log_metrics({
-            "final_weighted_accuracy": weighted_accuracy,
-            "final_weighted_f1": weighted_f1,
-            "total_samples_processed": total_samples,
-            "chunks_processed": len(chunk_metrics)
-        })
-    
+        mlflow.log_metrics(
+            {
+                "final_weighted_accuracy": weighted_accuracy,
+                "final_weighted_f1": weighted_f1,
+                "total_samples_processed": total_samples,
+                "chunks_processed": len(chunk_metrics),
+            }
+        )
+
     return weighted_accuracy, chunk_metrics
+
 
 # Usage
 # accuracy, metrics = memory_efficient_evaluation("very_large_predictions.parquet")
